removed deprecated java calls (URL) and wrapped context.client() into try with statement